--- a/example/app.json
+++ b/example/app.json
@@ -24,6 +24,7 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [["../app.plugin.js", { "apiKey": "custom_secret_api" }]]
   }
 }
